--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "vue": "^2.6.14",
     "vue-images-loaded": "^1.1.2",
     "vue-masonry": "^0.14.0",
-    "vue-masonry-component": "^1.1.31"
+    "vue-masonry-component": "^1.1.31",
+    "vue-router": "^3.5.3"
   },
   "name": "webshop",
   "version": "1.0.0",
